# dynamic-double-phase-field

./: README.md
double-phase-field-embedded-shear_dir_judge-refine-out_sigma-zhou-dynamic/shared/include/geocentric/materials/: constitutive-model.h  drucker-prager.h  gallipoli.h  linear-elastic.h  lode-angle.h  material-handler.h  modified-cam-clay.h  mohr-coulomb.h  phasefield-cohesive.h  phasefield-contact.h  phasefield-linear-elastic.h  phasefield-mix-mode.h  phasefield-shear-monolithic.h  porous-media.h  threeinvariant-cam-clay.h  van-genuchten.h
double-phase-field-embedded-shear_dir_judge-refine-out_sigma-zhou-dynamic/shared/include/geocentric/utilities/: constants.h  eigen-decomposition.h  function-handler.h  line-segment.h  moduli-conversions.h
double-phase-field-embedded-shear_dir_judge-refine-out_sigma-zhou-dynamic/shared/src/: drucker-prager.cc  eigen-decomposition.cc  function-handler.cc  gallipoli.cc  linear-elastic.cc  lode-angle.cc  material-handler.cc  moduli-conversions.cc  mohr-coulomb.cc  phasefield-cohesive.cc  phasefield-contact.cc  phasefield-linear-elastic.cc  phasefield-mix-mode.cc  phasefield-shear-monolithic.cc  porous-media.cc  threeinvariant-cam-clay.cc  van-genuchten.cc
double-phase-field-embedded-shear_dir_judge-refine-out_sigma-zhou-dynamic/solver/: CMakeLists.txt  model-hander-2.sh  model-hander-3.sh  model-hander.sh
double-phase-field-embedded-shear_dir_judge-refine-out_sigma-zhou-dynamic/solver/meshes/: zhou-30-frac.ucd
